--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id="who-we-are">
             <h2>Who We Are</h2>
-            <img class="profile-image" src="https://photos.fife.usercontent.google.com/pw/AP1GczNpfbDyVheMkH3Dd4GTatlmfbWAuiO6kwHeqRCNnULnODVuie1193fG=w683-h911-s-no-gm?authuser=0" alt="Profile image of Praveen Kumar G">
+            <img class="profile-image" src="https://github.com/Praveenguna428/img-hub/blob/main/IMG_20230729_104532_587~2.jpg?raw=true" alt="Profile image of Praveen Kumar G">
             <p>CRAFTY CODE is curated by Praveen Kumar G, a passionate individual with a Bachelor of Science degree and a TTC (Teacher Training Certificate) holder. With a deep-rooted love for learning and sharing knowledge, Praveen endeavors to create a platform where individuals can access quality content that educates, inspires, and informs.</p>
         </section>
 
