--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CRAFTY CODE: Empowering you with programming knowledge, insights, and inspiration.">
     <meta name="keywords" content="programming, coding, technology, learning, Praveen Kumar, CRAFTY CODE">
-    <meta property="og:title" content="About Us - CRAFTY CODE">
-    <meta property="og:description" content="Empowering you with programming knowledge and insights at CRAFTY CODE.">
-    <meta property="og:image" content="https://your-image-url.jpg">
     <title>About Us - CRAFTY CODE</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <h1>Welcome to CRAFTY CODE</h1>
@@ -23,11 +17,8 @@
     <main>
         <section id="who-we-are">
             <h2>Who We Are</h2>
-            <img class="profile-image" src="https://github.com/Praveenguna428/img-hub/blob/main/download.jpg?raw=true"
-                alt="Profile image of Praveen Kumar G">
-            <p>CRAFTY CODE is curated by Praveen Kumar G, a passionate individual with a Bachelor of Science degree and a
-                TTC (Teacher Training Certificate) holder. With a deep-rooted love for learning and sharing knowledge, Praveen
-                endeavors to create a platform where individuals can access quality content that educates, inspires, and informs.</p>
+            <img class="profile-image" src="https://avatars.githubusercontent.com/u/144327965?v=4" alt="Profile image of Praveen Kumar G">
+            <p>CRAFTY CODE is curated by Praveen Kumar G, a passionate individual with a Bachelor of Science degree and a TTC (Teacher Training Certificate) holder. With a deep-rooted love for learning and sharing knowledge, Praveen endeavors to create a platform where individuals can access quality content that educates, inspires, and informs.</p>
         </section>
 
         <section id="our-mission">
@@ -37,44 +28,16 @@
 
         <section id="what-we-offer">
             <h2>What We Offer</h2>
-            <ul>
-                <li>Posts about trending programming languages</li>
-                <li>Thought-provoking insights into coding</li>
-                <li>Practical coding tutorials and resources</li>
-                <li>Inspiration for aspiring coders</li>
-            </ul>
+            <p>Through our blog, we help you understand and learn the trending programming languages, software, and its tools. Here, you'll find posts related to programming languages, thought-provoking insights, or simply a dose of inspiration.</p>
         </section>
     </main>
 
-    <div class="section">
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/praveen-kumar-pk2020/" target="_blank">
-                <img src="https://toppng.com/uploads/preview/linkedin-logo-png-free-11660255212jmwsbnextx.png" alt="LinkedIn Profile of Praveen Kumar G">
-            </a>
-            <a href="https://github.com/Praveenguna428" target="_blank">
-                <img src="https://ouch-cdn2.icons8.com/_qv0GZ-TvUNz7L6kTDY6jQTK0ZL8PBgeSRketqzOyB0/rs:fit:456:456/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNDEw/LzY2ZThhYzc1LTJh/ZjAtNDk4MC1hNThl/LWMwOWY0NWIyM2Mz/NS5wbmc.png" alt="GitHub Profile of Praveen Kumar G">
-            </a>
-            <a href="https://x.com/praveenguna2020?t=f9QMWEU28eYcQzOo9Uu3fA&s=09" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/1683366300054069248/67v23AEj_400x400.jpg" alt="Twitter Profile of Praveen Kumar G">
-            </a>
-            <a href="https://www.instagram.com/praveen_py_dev/?hl=en" target="_blank">
-                <img src="https://e7.pngegg.com/pngimages/822/208/png-clipart-instagram-application-icon-social-media-logo-symbol-insta-text-monochrome.png" alt="Instagram Profile of Praveen Kumar G">
-            </a>
-        </div>
-    </div>
-
     <footer>
         <p>Connect With Us:</p>
-        <a class="contact-link" href="https://craftycodeverse.blogspot.com/p/contact-us.html" target="_blank">Contact Us</a>
+        <a class="contact-link" href="https://craftycodeverse.blogspot.com/p/contact-us.html">Contact Us</a>
+        <!-- Social media links can be added here -->
     </footer>
-
-    <style>
-        .social-links a:hover img {
-            transform: scale(1.1);
-            transition: transform 0.3s ease;
-        }
-    </style>
 </body>
-
 </html>
+
 
