--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section id="who-we-are">
             <h2>Who We Are</h2>
-            <img class="profile-image" src="https://avatars.githubusercontent.com/u/144327965?v=4" alt="Profile image of Praveen Kumar G">
+            <img class="profile-image" src="https://github.com/Praveenguna428/img-hub/blob/main/download.jpg?raw=true" alt="Profile image of Praveen Kumar G">
             <p>CRAFTY CODE is curated by Praveen Kumar G, a passionate individual with a Bachelor of Science degree and a TTC (Teacher Training Certificate) holder. With a deep-rooted love for learning and sharing knowledge, Praveen endeavors to create a platform where individuals can access quality content that educates, inspires, and informs.</p>
         </section>
 
