--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <footer>
         <p>Connect With Us:</p>
-        <a class="contact-link" href="https://craftycodeverse.blogspot.com/p/contact-us.html">Contact Us</a>
+        <a class="contact-link" href="https://praveenguna428.github.io/contact-us-form/">Contact Us</a>
         <!-- Social media links can be added here -->
     </footer>
 </body>
