--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
         </section>
     </main>
 
+           <!-- Social Media Links Section -->
+        <div class="section">
+            <h2>Follow Me</h2>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/praveen-kumar-pk2020/" target="_blank">
+                    <img src="https://toppng.com/uploads/preview/linkedin-logo-png-free-11660255212jmwsbnextx.png" alt="LinkedIn">
+                </a>
+                <a href="https://github.com/Praveenguna428" target="_blank">
+                    <img src="https://ouch-cdn2.icons8.com/_qv0GZ-TvUNz7L6kTDY6jQTK0ZL8PBgeSRketqzOyB0/rs:fit:456:456/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNDEw/LzY2ZThhYzc1LTJh/ZjAtNDk4MC1hNThl/LWMwOWY0NWIyM2Mz/NS5wbmc.png" alt="GitHub">
+                </a>
+                <a href="https://x.com/praveenguna2020?t=f9QMWEU28eYcQzOo9Uu3fA&s=09" target="_blank">
+                    <img src="https://pbs.twimg.com/profile_images/1683366300054069248/67v23AEj_400x400.jpg" alt="Twitter">
+                </a>
+                <a href="https://www.instagram.com/praveen_py_dev/?hl=en" target="_blank">
+                  <img src="https://e7.pngegg.com/pngimages/822/208/png-clipart-instagram-application-icon-social-media-logo-symbol-insta-text-monochrome.png" alt="Instagram">
+                </a>
+            </div>
+        </div>
+
     <footer>
         <p>Connect With Us:</p>
         <a class="contact-link" href="https://praveenguna428.github.io/contact-us-form/">Contact Us</a>
