--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="https://pbs.twimg.com/profile_images/1683366300054069248/67v23AEj_400x400.jpg" alt="Twitter">
                 </a>
                 <a href="https://www.instagram.com/praveen_py_dev/?hl=en" target="_blank">
-                  <img src="https://e7.pngegg.com/pngimages/822/208/png-clipart-instagram-application-icon-social-media-logo-symbol-insta-text-monochrome.png" alt="Instagram">
+                  <img src="https://img.freepik.com/free-vector/instagram-logo_1199-122.jpg?semt=ais_hybrid" alt="Instagram">
                 </a>
             </div>
         </div>
