--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="section">
             <h2>Follow Me</h2>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/praveen-kumar-pk2020/" target="_blank">
+                <a href="https://github.com/Praveenguna428/img-hub/blob/main/images-removebg-preview.png?raw=true" target="_blank">
                     <img src="https://toppng.com/uploads/preview/linkedin-logo-png-free-11660255212jmwsbnextx.png" alt="LinkedIn">
                 </a>
                 <a href="https://github.com/Praveenguna428" target="_blank">
